# Nova-Runtime

./: .gitignore  AUDIT_PHASE5.md  AUDIT_REPORT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  novad.toml
.cartographer/: data.db
.github/workflows/: ci.yml
crates/nova-api/: Cargo.toml
crates/nova-api/src/: admin.rs  error.rs  lib.rs  middleware.rs  server.rs  ws.rs
crates/nova-api/src/routes/: auth.rs  blob.rs  cache.rs  mod.rs  queue.rs  scheduler.rs  search.rs  sql.rs
crates/nova-api/tests/: startup_shutdown.rs
crates/nova-auth/: Cargo.toml
crates/nova-auth/src/: brute_force.rs  error.rs  lib.rs  manager.rs  mfa.rs  middleware.rs  password_policy.rs  providers.rs  rbac.rs  session.rs  types.rs
crates/nova-blob/: Cargo.toml
crates/nova-blob/src/: chunk.rs  config.rs  dedup.rs  download.rs  error.rs  gc.rs  lib.rs  manager.rs  merkle.rs  metadata.rs  namespace.rs  stats.rs  upload.rs
crates/nova-blob/src/backend/: filesystem.rs  mod.rs
crates/nova-blob/tests/: blob_integration.rs
crates/nova-cache/: Cargo.toml
crates/nova-cache/src/: config.rs  error.rs  lib.rs  manager.rs  metrics.rs  policy.rs
crates/nova-cache/src/backend/: hashmap.rs  mod.rs  ttl.rs
crates/nova-cache/tests/: hashmap_backend.rs
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: app.rs  client.rs  lib.rs  main.rs  output.rs
crates/nova-cli/src/commands/: auth.rs  blob.rs  cache.rs  config_cmd.rs  db.rs  mod.rs  queue.rs  runtime.rs  scheduler.rs  search.rs  sql.rs
crates/nova-config/: Cargo.toml
crates/nova-config/src/: config.rs  loader.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: error.rs  traits.rs  types.rs
crates/nova-event/: Cargo.toml
crates/nova-event/src/: bus.rs  dead_letter.rs  event.rs  lib.rs  middleware.rs  store.rs  subscription.rs  trie.rs
crates/nova-executor/: Cargo.toml
crates/nova-executor/src/: cancellation.rs  circuit_breaker.rs  context.rs  lib.rs  metrics.rs  middleware.rs  operation_queue.rs  pipeline.rs  rate_limiter.rs  types.rs
crates/nova-executor/tests/: event_integration.rs  integration_main.rs  security_integration.rs
crates/nova-gql/: Cargo.toml
crates/nova-gql/src/: context.rs  error.rs  input.rs  lib.rs  mutation.rs  query.rs  schema.rs  subscription.rs  types.rs
crates/nova-memory/: Cargo.toml
crates/nova-memory/src/: arena.rs  budget.rs  gc.rs  lib.rs  mmap.rs  page_allocator.rs  pool.rs  slab.rs
crates/nova-object/: Cargo.toml
crates/nova-object/src/: document.rs  lib.rs  registry.rs  schema.rs  serialization.rs  types.rs  validation.rs
crates/nova-queue/: Cargo.toml
crates/nova-queue/src/: backend.rs  config.rs  error.rs  lib.rs  manager.rs  scanner.rs  types.rs
crates/nova-scheduler/: Cargo.toml
crates/nova-scheduler/src/: backend.rs  error.rs  lib.rs  manager.rs  time_wheel.rs  types.rs
crates/nova-search/: Cargo.toml
crates/nova-search/src/: config.rs  document.rs  error.rs  facet.rs  highlight.rs  lib.rs  manager.rs
crates/nova-search/src/analysis/: mod.rs  stemmer.rs  stop_words.rs  tokenizer.rs
crates/nova-search/src/fuzzy/: levenshtein.rs
crates/nova-search/src/index/: mod.rs  segment.rs  writer.rs
crates/nova-search/src/posting/: list.rs
crates/nova-search/src/query/: ast.rs  executor.rs  mod.rs  parser.rs
crates/nova-search/src/scoring/: bm25.rs  collector.rs  mod.rs
crates/nova-search/tests/: search_integration.rs
crates/nova-security/: Cargo.toml
crates/nova-security/src/: audit.rs  encryption.rs  lib.rs  rate_limiter.rs  rng.rs  secrets.rs  validator.rs
crates/nova-sim/: Cargo.toml
crates/nova-sim/src/: engine.rs  main.rs  subsys.rs
crates/nova-sql/: Cargo.toml
crates/nova-sql/src/: ast.rs  binder.rs  config.rs  engine.rs  error.rs  lexer.rs  lib.rs  parser.rs  result.rs  schema.rs  type_checker.rs  type_mapping.rs
crates/nova-sql/src/execute/: executor.rs  iterators.rs  mod.rs  table_store.rs
crates/nova-sql/src/plan/: logical.rs  mod.rs  planner.rs
crates/nova-sql/tests/: sql_integration.rs
crates/nova-storage/: Cargo.toml
crates/nova-storage/src/: blob.rs  btree.rs  lib.rs  lsm.rs  page_cache.rs  router.rs  store.rs  txn.rs  wal.rs
crates/novad/: Cargo.toml
crates/novad/src/: main.rs
crates/novad/static/: graphql-playground.html
crates/novad/tests/: novad_integration.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AuthContext.tsx  DataTable.tsx  ErrorBoundary.tsx  Header.tsx  Icons.tsx  Layout.tsx  MetricCard.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Auth.tsx  Blob.tsx  Cache.tsx  Config.tsx  Dashboard.tsx  Database.tsx  LoginPage.tsx  Logs.tsx  Queue.tsx  Scheduler.tsx  Search.tsx
dashboard/src/styles/: global.css
dashboard/src/types/: index.ts
docker/: nginx.conf
docs/: 00-introduction.md  01-getting-started.md  01-project-vision.md  02-configuration.md  02-core-principles.md  03-cli-reference.md  03-glossary.md  04-requirements-analysis.md  04-rest-api-reference.md  05-domain-model.md  05-graphql-api-reference.md  06-high-level-architecture.md  06-subsystems-overview.md  07-deployment.md  07-runtime-architecture.md  08-storage-engine.md  08-testing-simulation.md  09-dashboard.md  09-memory-model.md  10-execution-engine.md  11-event-system.md  12-object-model.md  13-networking.md  14-configuration.md  15-security.md  16-authentication.md  17-cache.md  18-queue.md  19-scheduler.md  19-search.md  20-blob-storage.md  20-search.md  21-sql-layer.md  22-rest-api.md  22-sql-layer.md  23-rest-api.md  24-graphql.md  25-cli.md  25-sdk.md  26-sdk.md  (+7 more)
scripts/: dev.sh  seed.sh  setup.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: auth.ts  blob.ts  cache.ts  client.ts  database.ts  errors.ts  index.ts  queue.ts  runtime.ts  scheduler.ts  search.ts  types.ts
sdk/tests/: client.test.ts
