[package]
name = "nova-api"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-config = { path = "../nova-config" }
nova-executor = { path = "../nova-executor" }
nova-storage = { path = "../nova-storage" }
nova-memory = { path = "../nova-memory" }
nova-event = { path = "../nova-event" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile.workspace = true
