[package]
name = "nova-auth"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-security = { path = "../nova-security" }
nova-cache = { path = "../nova-cache" }
nova-executor = { path = "../nova-executor" }
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
sha2 = "0.10"
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
proptest = "1"
tempfile = "3"
