[package]
name = "nova-auth"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-security = { path = "../nova-security" }
nova-cache = { path = "../nova-cache" }
nova-executor = { path = "../nova-executor" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
sha2.workspace = true
bcrypt = "0.16"
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
