[package]
name = "nova-blob"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
async-trait.workspace = true
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
parking_lot.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
default = ["backend-filesystem"]
backend-filesystem = []
