[package]
name = "nova-blob"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
async-trait.workspace = true
sha2.workspace = true
uuid.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
parking_lot.workspace = true
bytes.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[features]
default = ["backend-filesystem"]
backend-filesystem = []
