[package]
name = "nova-cache"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-config = { path = "../nova-config" }
nova-event = { path = "../nova-event" }
async-trait.workspace = true
lru.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dashmap.workspace = true
uuid.workspace = true
crossbeam.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
