[package]
name = "nova-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
nova-config = { path = "../nova-config" }
nova-core = { path = "../nova-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono.workspace = true
base64.workspace = true
