[package]
name = "nova-config"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
