[package]
name = "nova-event"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
regex.workspace = true
