[package]
name = "nova-executor"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-config = { path = "../nova-config" }
nova-object = { path = "../nova-object" }
nova-event = { path = "../nova-event" }
nova-security = { path = "../nova-security" }
nova-storage = { path = "../nova-storage" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
crossbeam.workspace = true
bytes.workspace = true
arc-swap.workspace = true
lru.workspace = true
tokio = { version = "1", features = ["sync", "time"] }
