[package]
name = "nova-object"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
regex.workspace = true
hex.workspace = true
base64.workspace = true
crc32c.workspace = true
