[package]
name = "nova-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
