[package]
name = "nova-search"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
regex.workspace = true
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

[dev-dependencies]
proptest.workspace = true
