[package]
name = "nova-security"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-storage = { path = "../nova-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
hex.workspace = true
base64.workspace = true
regex.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
aes-gcm.workspace = true
aes-gcm-siv.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest = "1.0.0"
