[package]
name = "nova-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
nova-event = { path = "../nova-event" }
rand.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
serde_json.workspace = true
anyhow.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
