[package]
name = "nova-sql"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
regex.workspace = true

[dev-dependencies]
proptest = "1"
tempfile = "3"
