[package]
name = "nova-sql"
version.workspace = true
edition.workspace = true

[dependencies]
nova-core = { path = "../nova-core" }
nova-event = { path = "../nova-event" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
