[package]
name = "novad"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["full"] }
nova-config = { path = "../nova-config" }
nova-core = { path = "../nova-core" }
nova-memory = { path = "../nova-memory" }
nova-storage = { path = "../nova-storage" }
nova-executor = { path = "../nova-executor" }
nova-cache = { path = "../nova-cache" }
nova-blob = { path = "../nova-blob" }
nova-search = { path = "../nova-search" }
nova-sql = { path = "../nova-sql" }
nova-queue = { path = "../nova-queue" }
nova-scheduler = { path = "../nova-scheduler" }
nova-auth = { path = "../nova-auth" }
nova-api = { path = "../nova-api" }
nova-event = { path = "../nova-event" }
nova-gql = { path = "../nova-gql" }
axum.workspace = true
async-graphql = { version = "6", features = ["chrono", "uuid"] }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
nix = { version = "0.28", features = ["signal"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
parking_lot = { workspace = true }

